Fix: Prevent text from overflowing its container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ header {
     margin-left: 12px;
 }
 
-@media not (max-width: 940px) {
+@media not (max-width: 950px) {
     #nav_head {
         display: none;
     }
@@ -72,7 +72,7 @@ header {
 }
 
 #nav {
-    max-width: 940px;
+    max-width: 950px;
     height: 100%;
     box-sizing: border-box;
     display: flex;
@@ -81,7 +81,7 @@ header {
     margin: 0 auto;
 }
 
-@media (max-width: 940px) {
+@media (max-width: 950px) {
     #nav {
         display: none;
     }
